# mlir-tuple-dialect

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.rs
.cargo/: config.toml
cpp/: Canonicalization.cpp  Canonicalization.hpp  ConvertToLLVM.cpp  ConvertToLLVM.hpp  ConvertToTrait.cpp  ConvertToTrait.hpp  Dialect.cpp  Dialect.hpp  Dialect.td  Elaboration.cpp  Elaboration.hpp  Enums.cpp  Enums.hpp  Enums.td  ImplGenerators.cpp  ImplGenerators.hpp  Makefile  Monomorphization.cpp  Monomorphization.hpp  Ops.cpp  Ops.hpp  Ops.td  Plugin.cpp  Tuple.cpp  Tuple.hpp  Tuple.td  TupleEnums.cpp  TupleEnums.hpp  TupleEnums.td  TupleOps.cpp  TupleOps.hpp  TupleOps.td  TupleTypes.cpp  TupleTypes.hpp  TupleTypes.td  Types.cpp  Types.hpp  Types.td  c_api.cpp  c_api.h
cpp/tests/: all_elaborate.mlir  all_monomorphization.mlir  append.mlir  append_canonicalization.mlir  append_lowering.mlir  canonicalize_pass.mlir  cat.mlir  cat_elaborate.mlir  cat_monomorphization.mlir  cmp_eq_ne_lowering.mlir  cmp_eq_ne_monomorphization.mlir  cmp_lt_le_gt_ge_lowering.mlir  cmp_lt_le_gt_ge_monomorphization.mlir  constant.mlir  constant_lowering.mlir  convert_to_llvm.mlir  convert_to_llvm_generic_op.mlir  downcast.mlir  downcast_invalid.mlir  drop_last.mlir  drop_last_elaborate.mlir  drop_last_monomorphization.mlir  elaborate_contract.mlir  elaborate_noop_on_core.mlir  exclusive_scan.mlir  exclusive_scan_elaborate.mlir  exclusive_scan_monomorphization.mlir  flat_map.mlir  flat_map_elaborate.mlir  flatten.mlir  last.mlir  (+21 more)
src/: lib.rs
tests/: integration.rs
