[package]
name = "mlir-tuple-dialect"
version = "0.2.0"
edition = "2024"

[dependencies]
melior = "0.27"
mlir-sys = "220.0.1"
trait_dialect = { path = "../mlir-trait-dialect", package = "mlir-trait-dialect" }

[lib]
name = "tuple_dialect"
path = "src/lib.rs"

[dev-dependencies]
inline_dialect = { path = "../mlir-inline-dialect", package = "mlir-inline-dialect" }
